--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-pandas
-geopandas
 folium
-matplotlib
-mapclassify
-tabulate
-shapely
+geopandas
+imutils
 ipykernel
+mapclassify
+matplotlib
+numpy
+opencv-python
+openai
+pandas
+pillow
+shapely
+tabulate
